[gd_scene load_steps=10 format=3 uid="uid://bgjhhsklm04cr"]

[ext_resource type="Texture2D" uid="uid://c1vfb8rcegnet" path="res://images/Buttoning/upgrade base.png" id="1_v7l3b"]
[ext_resource type="Texture2D" uid="uid://c2omuuv3uvqj0" path="res://images/Buttoning/upgrade base_pressed.png" id="2_eva6i"]
[ext_resource type="Texture2D" uid="uid://dkt83jm8fu65" path="res://images/Buttoning/upgrade base_hover.png" id="3_xesa7"]
[ext_resource type="Texture2D" uid="uid://c5fo8sb7555qv" path="res://images/Buttoning/upgrade base_disabled.png" id="4_4v66k"]
[ext_resource type="Script" path="res://unique_scripts/upgrades/gemsort_up.gd" id="5_1ip7h"]
[ext_resource type="PackedScene" uid="uid://byjou0ej56xjj" path="res://Scenes/upgrades/purchased/gemsort_upp.tscn" id="6_pb6m1"]
[ext_resource type="PackedScene" uid="uid://chxf6458agcj2" path="res://Scenes/debuffs/gem_fight.tscn" id="7_ckpjb"]
[ext_resource type="Texture2D" uid="uid://bccgwdjhc4ay" path="res://images/UpgradeIcon/upgrades/gemsort.png" id="8_jltxq"]

[sub_resource type="Theme" id="Theme_a4apo"]
default_font_size = 16

[node name="gemsort_up" type="TextureButton" groups=["Persist"]]
visible = false
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
theme = SubResource("Theme_a4apo")
texture_normal = ExtResource("1_v7l3b")
texture_pressed = ExtResource("2_eva6i")
texture_hover = ExtResource("3_xesa7")
texture_disabled = ExtResource("4_4v66k")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_1ip7h")
title = "Gem Sorting"
description = "Increases Kobold Income based on the amount of Gems owned"
cost = 150000
tier = 1
build_req = 40
target_node = ExtResource("6_pb6m1")
debuff_node = ExtResource("7_ckpjb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_jltxq")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="timeout"]
